2008-06-29  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: -source 1.4 to suppress javac warnings


2008-06-28  Perry McFarlane  <perry_m@fastmail.fm>
* memory.h: suppress PAGED_MEM warning


2008-06-27  Perry McFarlane  <perry_m@fastmail.fm>
* atari.c: add -basic_rom none
* Makefile.in fix javanvm variables
* util.[ch] cassette.c, configure.ac: Util_strncpy to fix javanvm bug
* INSTALL, UnixRuntime.patch, atari800.java, atari_javanvm.c: Java applet


2008-06-24  Perry McFarlane  <perry_m@fastmail.fm>
* pbi.[ch], pbi_xld.[ch], pbi_bb.[ch], pbi_mio.[ch], statesav.c: state saving
for MIO, Black Box, XLD.


2008-06-19  Perry McFarlane  <perry_m@fastmail.fm>
* ui.c, xep80.c: improve XEP80 state saving


2008-06-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/CREDITS, DOC/TODO, USAGE, atari.c, atari_sdl.c, configure.ac, pia.c,
platform.h, statesav.c, ui.c, xep80.[ch], xep80_fonts.[ch]:
Added XEP80 emulation by Mark Grebe to the SDL version, from Atari800MacX


2008-06-18  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c (Atari_Keyboard): recognize TAB key.
* atari_x11.c (Atari_DisplayScreen): add missing XSync call in not-SHM
part.
* ui.c, ui.h: add additional parameter to the fMessage function,
indicating whether to wait for a key press. Display a "please wait"
message in SaveState and LoadState.
* ui_basic.c: adapt to fMessage change. Change BasicUIMessage to use
the new parameter and clear status line before writing the new
message.


2008-06-15  Christian Groessler  <chris@groessler.org>
* rdevice.c, dc/Makefile.dc, dc/config.h, dc/atari_dc.c: add serial R:
support for Dreamcast


2008-06-14  Perry McFarlane  <perry_m@fastmail.fm>
* input.c: 5200 bit 5 toggle fix (Star Trek)
* atari_sdl.c, input.c: fix shift+control keys
* atari_sdl.c, dos/atari_vga.c, javanvm/atari_javanvm.c,
  win32/atari_win32.c: further shift+control fixes
* USAGE: updated keyboard
* statesav.c: fix gzFile


2008-06-13  Perry McFarlane  <perry_m@fastmail.fm>